--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,12 +16,13 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@next/third-parties": "^14.2.3",
     "@rainbow-me/rainbowkit": "^1.0.2",
     "@wagmi/connectors": "^3.1.10",
     "axios": "^1.6.5",
     "ethers": "^6.8.0",
     "framer-motion": "^10.17.9",
-    "next": "^13.4.2",
+    "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
